--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-
-    <title>Clone pipefy</title>
+    <meta name="description" content="Taskboard criado por RCarrenho" />
+    <link rel="shortcut icon" href="image/favicon.png" type="image/png" />
+    <title>Taskboard - RCarrenho</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
